full-moon/tests/cases/fail/parser/numeric-for-3/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/numeric-for-3
---
error[ast]: unexpected token ``.  (expected `,` after start expression)
  ┌─ source.lua:1:10
  │
1 │ for x = 1
  │          ^


